@@ -1,10 +1,8 @@
-package kr.hhplus.be.server.application.order.listener;
+package kr.hhplus.be.server.application.order;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import kr.hhplus.be.server.application.order.OrderCalculationService;
-import kr.hhplus.be.server.application.order.OrderPlacementService;
 import kr.hhplus.be.server.application.order.dto.OrderDto;
 import kr.hhplus.be.server.domain.order.command.OrderCommand;
 
@@ -27,6 +25,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Collections;
 import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
@@ -45,8 +44,8 @@ public class OrderPlacementServiceTest{
 
         @Test
         @DisplayName("유효한 커맨드가 주어지면 Order를 생성하여 저장하고 반환한다")
-        void givenValidCommand_whenPlaceOrder_thenReturnsSavedOrder() {
-            // --- Arrange ---
+        void 주문_생성_성공() {
+            // given
             OrderCommand cmd = OrderCommand.of(
                     1L,
                     List.of(new OrderItemCommand(100L, 2)),
@@ -67,25 +66,26 @@ public class OrderPlacementServiceTest{
             int qty = cmd.getItems().get(0).getQty();  // 예: 2
             OrderItem orderItem = new OrderItem(mockProduct, qty, mockProduct.getPrice());
             List<OrderItem> orderItems = List.of(orderItem);
-            OrderDto dto = new OrderDto(List.of(orderItem), 5000);
-            when(orderCalculationService.calculateOrderItems(cmd.getItems()))
+            OrderDto dto = new OrderDto(List.of(orderItem), 5000,0,5000);
+            List<UserCoupon> userCoupons = Collections.emptyList();
+            when(orderCalculationService.calculateOrderItems(cmd.getItems(), userCoupons))
                     .thenReturn(dto);
 
             // 4) save 시 그대로 리턴
             when(orderService.save(any(Order.class)))
                     .thenAnswer(inv -> inv.getArgument(0));
 
-            // --- Act ---
+            // when
             Order result = placementService.placeOrder(cmd);
 
-            // --- Assert ---
+            // then
             assertNotNull(result);
             assertEquals(mockUser, result.getUser());
             assertEquals(5000, result.getTotalPrice());
 
             verify(userService).findByUserId(1L);
             verify(userCouponService).retrieveCoupons(cmd.getUserCouponIds());
-            verify(orderCalculationService).calculateOrderItems(cmd.getItems());
+            verify(orderCalculationService).calculateOrderItems(cmd.getItems(), userCoupons);
             verify(orderService).save(any(Order.class));
         }
     }
@@ -95,15 +95,15 @@ public class OrderPlacementServiceTest{
     class Failure {
 
         @Test
-        @DisplayName("UserService 조회 실패 시 예외를 그대로 전파한다")
-        void whenUserNotFound_thenThrows() {
-            // --- Arrange ---
+        @DisplayName("사용자 조회 실패 시 예외를 그대로 전파한다")
+        void 사용자_조회_실패시_예외처리() {
+            // given
             OrderCommand cmd = mock(OrderCommand.class);
             when(cmd.getUserId()).thenReturn(1L);
             when(userService.findByUserId(1L))
                     .thenThrow(new RuntimeException("사용자 없음"));
 
-            // --- Act & Assert ---
+            // when & then
             RuntimeException ex = assertThrows(
                     RuntimeException.class,
                     () -> placementService.placeOrder(cmd)
@@ -114,18 +114,19 @@ public class OrderPlacementServiceTest{
         }
 
         @Test
-        @DisplayName("OrderCalculationService 실패 시 예외를 전파하고 save는 호출하지 않는다")
-        void whenCalculationFails_thenThrows() {
-            // --- Arrange ---
+        @DisplayName("OrderCalculationService 실패 시 예외를 발생시키고 주문은 저장되지 않는다")
+        void 계산_실패시_예외처리() {
+            // given
             OrderCommand cmd = OrderCommand.of(1L, List.of(), List.of());
+            List<UserCoupon> userCoupons = Collections.emptyList();
             when(userService.findByUserId(anyLong()))
                     .thenReturn(new User(1L, "테스트"));
             when(userCouponService.retrieveCoupons(anyList()))
                     .thenReturn(List.of());
-            when(orderCalculationService.calculateOrderItems(cmd.getItems()))
+            when(orderCalculationService.calculateOrderItems(cmd.getItems(), userCoupons))
                     .thenThrow(new IllegalStateException("계산 실패"));
 
-            // --- Act & Assert ---
+            // when & then
             IllegalStateException ex = assertThrows(
                     IllegalStateException.class,
                     () -> placementService.placeOrder(cmd)
